--- a/cart.html
+++ b/cart.html
@@ -3,40 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Carrito de Compras</title>
+    <link rel="stylesheet" href="cart.css">
+    <script type="module" src="cart.js" defer></script>
 </head>
 <body>
-    <div id="cart"></div>
-
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            const cart = JSON.parse(localStorage.getItem('cart')) || [];
-            const cartContainer = document.getElementById('cart');
-
-            if (cart.length === 0) {
-                cartContainer.innerHTML = '<p>El carrito está vacío</p>';
-            } else {
-                cart.forEach(item => {
-                    const itemElement = document.createElement('div');
-                    itemElement.innerHTML = `
-                        <h2>${item.title}</h2>
-                        <img src="${item.image}" alt="${item.title}" class="product-image">
-                        <p>Precio: $${item.price.toFixed(2)}</p>
-                        <div class="options">
-                            <h3>Opciones Seleccionadas:</h3>
-                            ${Object.keys(item.options).map(group => `
-                                <div class="option-group">
-                                    <h4>${group}</h4>
-                                    <p>${item.options[group].join(', ')}</p>
-                                </div>
-                            `).join('')}
-                        </div>
-                    `;
-                    cartContainer.appendChild(itemElement);
-                });
-            }
-        });
-    </script>
+    <h1>Carrito de Compras</h1>
+    <div id="cart-items"></div>
+    <div id="cart-total">Total: $0.00</div>
+    <button onclick="sendWhatsAppOrder()">Enviar Orden</button>
 </body>
 </html>
