--- a/product.html
+++ b/product.html
@@ -20,9 +20,9 @@
         </div>
     </div>
     <!-- Botón flotante del carrito -->
-    <button id="cart-button" onclick="window.location.href='cart.html'">
-        🛒
-        <div id="cart-total">0.00</div>
-    </button>
+    <div id="cart-button">
+        <span id="cart-total">$0.00</span>
+        <button onclick="window.location.href='cart.html'">Ver Carrito</button>
+    </div>
 </body>
 </html>
