--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </footer>
 
     <!-- Botón flotante del carrito -->
-    <button id="cart-button" onclick="window.location.href='cart.html'">
-        🛒
-        <div id="cart-total">0.00</div>
-    </button>
+    <div id="cart-button">
+        <span id="cart-total">$0.00</span>
+        <button onclick="window.location.href='cart.html'">Ver Carrito</button>
+    </div>
 </body>
 </html>
