--- a/cart.html
+++ b/cart.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de Compras</title>
+    <title>Orden hasta el momento</title>
     <link rel="stylesheet" href="cart.css">
+    <link rel="icon" href="Logo_Elotecos.PNG" type="Elotecos-icon">
     <script  src="cart.js" defer></script>
 </head>
 <body>
-    <h1>Carrito de Compras</h1>
+    <h1>Orden hasta el momento</h1>
     <div id="cart-items"></div>
     <div id="cart-total">Total: $0.00</div>
     <button onclick="sendWhatsAppOrder()">Enviar Orden</button>
