--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ordenes Elotecos</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="Logo_Elotecos.PNG" type="Elotecos-icon">
     <script defer type="module" src="principal.js"></script>
 </head>
 <body>
     <header>
         <h1>Ordenes Elotecos</h1>
+        <div id="open-info">
+            <h3>Abierto/Cerrado</h3>
+            <h3>Mas información</h3>
+        </div>
     </header>
     <nav class="horizontal-scroll">
         <button id="btn-todo"><b>Todo</b></button>
