--- a/product.html
+++ b/product.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles del Producto</title>
     <link rel="stylesheet" href="products.css">
+    <link rel="icon" href="Logo_Elotecos.PNG" type="Elotecos-icon">
     <script type="module" src="product.js" defer></script>
 </head>
 <body>
@@ -16,7 +17,7 @@
             <p></p>
             <div class="price"></div>
             <div class="options"></div>
-            <button class="add-to-cart">Añadir al Carrito</button>
+            <button class="add-to-cart">Añadir a la Orden</button>
         </div>
     </div>
     <!-- Botón flotante del carrito -->
