--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
     <header>
-        <h1>Ordenes Elotecos</h1>
+        <img src="Logo_Elotecos.PNG" alt="Logo_Elotecos" width="10%">
+        <h1>Los Elotecos</h1>
         <div id="open-info">
             <h3>Abierto/Cerrado</h3>
             <h3>Mas información</h3>
