--- a/cart.html
+++ b/cart.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Orden hasta el momento</title>
     <link rel="stylesheet" href="cart.css">
-    <link rel="icon" href="Logo_Elotecos.PNG" type="Elotecos-icon">
+    <link rel="icon" href="Logo_Elotecos.png" type="Elotecos-icon">
     <script src="cart.js" defer></script>
 </head>
 <body>
