--- a/product.html
+++ b/product.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles del Producto</title>
     <link rel="stylesheet" href="products.css">
-    <link rel="icon" href="Logo_Elotecos.PNG" type="Elotecos-icon">
+    <link rel="icon" href="Logo_Elotecos.png" type="Elotecos-icon">
     <script type="module" src="product.js" defer></script>
 </head>
 <body>
