--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="Logo_Elotecos.PNG" alt="Logo_Elotecos" class="logo">
+        <img src="Logo_Elotecos.png" alt="Logo_Elotecos" class="logo">
         <h1>Los Elotecos</h1>
         <div id="open-info">
             <div id="status-container">
