--- a/cart.html
+++ b/cart.html
@@ -6,12 +6,13 @@
     <title>Orden hasta el momento</title>
     <link rel="stylesheet" href="cart.css">
     <link rel="icon" href="Logo_Elotecos.png" type="Elotecos-icon">
-    <script src="cart.js" defer></script>
+    
 </head>
 <body>
     <h1>Orden hasta el momento</h1>
     <div id="cart-items"></div>
     <div id="cart-total">Total: $0.00</div>
     <button onclick="sendWhatsAppOrder()">Enviar Orden</button>
+    <script src="cart.js"></script>
 </body>
 </html>
