--- a/cart.html
+++ b/cart.html
@@ -6,10 +6,12 @@
     <title>Orden hasta el momento</title>
     <link rel="stylesheet" href="cart.css">
     <link rel="icon" href="Logo_Elotecos.png" type="Elotecos-icon">
-    
 </head>
 <body>
-    <h1>Orden hasta el momento</h1>
+    <div class="header">
+        <button onclick="window.location.href='index.html'">Volver al menú</button>
+        <h1>Orden hasta el momento</h1>
+    </div>
     <div class="customer-details">
         <label for="customer-name">Nombre:</label>
         <input type="text" id="customer-name" placeholder="Tu nombre">
