--- a/index.html
+++ b/index.html
@@ -34,7 +34,17 @@
     </main>
     <footer>
         <p>© 2024 Elotecos</p>
+        <div class="social-icons">
+            <a href="https://www.facebook.com/tuperfil" target="_blank">
+                <img src="Logo_fb.png" alt="Facebook" style="width: 24px; height: 24px;">
+            </a>
+            <a href="https://www.instagram.com/tuperfil" target="_blank">
+                <img src="Logo_insta.png" alt="Instagram" style="width: 24px; height: 24px;">
+            </a>
+        </div>
     </footer>
+    
+    
 
     <!-- Botón flotante del carrito -->
     <div id="cart-button" onclick="window.location.href='cart.html'">
